--- a/css/style.css
+++ b/css/style.css
@@ -1625,7 +1625,7 @@ a.transportes {
 }
 
 .blog-slide .active .views-field-title {
-	color: red;
+	color: blue;
 }
 
 .es-ticker{
@@ -1731,6 +1731,10 @@ a.transportes {
 	background: url("../images/marca1.png") no-repeat right bottom;
 	width: 195px;
 	margin-top: -50px;
+}
+
+.single{
+	font-weight: bold;
 }
 
 .slider-name-single {
